@@ -1,23 +1,12 @@
 package com.mazzee.dts.service;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.sql.SQLException;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.time.format.DateTimeFormatter;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.transaction.Transactional;
 import javax.transaction.Transactional.TxType;
@@ -25,13 +14,11 @@ import javax.transaction.Transactional.TxType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import com.mazzee.dts.aws.AwsS3Util;
 import com.mazzee.dts.dto.CustomerDto;
 import com.mazzee.dts.dto.DressDetailDto;
 import com.mazzee.dts.dto.DressDto;
@@ -55,7 +42,7 @@ import com.mazzee.dts.utils.DtsUtils;
  */
 @Service
 public class DressService {
-	private final static Logger LOGGER = LoggerFactory.getLogger(DressService.class);
+	private static final Logger LOGGER = LoggerFactory.getLogger(DressService.class);
 	private UserService userService;
 	private DressRepo dressRepo;
 	private CustomerService customerService;
@@ -63,9 +50,7 @@ public class DressService {
 	private MeasurementService measurementService;
 	private UserDressTypeService userDressTypeService;
 	private DressDtoMapper dressDtoMapper;
-	private AwsS3Util awsS3Util;
-	@Value("${dts.amazon.s3.bucketname.rootfolder}")
-	private String rootFolder;
+	private MeasurementImageService measurementImageService;
 
 	@Autowired
 	public void setUserService(UserService userService) {
@@ -103,12 +88,8 @@ public class DressService {
 	}
 
 	@Autowired
-	public void setAwsS3Util(AwsS3Util awsS3Util) {
-		this.awsS3Util = awsS3Util;
-	}
-
-	public void setRootFolder(String rootFolder) {
-		this.rootFolder = rootFolder;
+	public void setMeasurementImageService(MeasurementImageService measurementImageService) {
+		this.measurementImageService = measurementImageService;
 	}
 
 	public List<Dress> getDressList(String dressType) {
@@ -135,7 +116,7 @@ public class DressService {
 			pageDress = dressRepo.getDressListByUserAndDressType(userId, dressType, PageRequest.of(offset, limit));
 		}
 		if (Objects.nonNull(pageDress)) {
-			dressList = pageDress.get().collect(Collectors.toList());
+			dressList = pageDress.get().toList();
 			dressDtoList = getDressDtoList(dressList);
 		}
 		return dressDtoList;
@@ -162,7 +143,7 @@ public class DressService {
 				dressDtoList = dressDtoList.stream().map(dress -> {
 					dress.setCustomer(null);
 					return dress;
-				}).collect(Collectors.toList());
+				}).toList();
 			}
 //		get invoice of customer
 			Optional<Invoice> invoice = invoiceService.getInvoiceByCustomerId(customerId);
@@ -186,8 +167,7 @@ public class DressService {
 		LOGGER.info("Converting entity list to dto");
 		List<DressDto> dressDtoList = null;
 		if (!DtsUtils.isNullOrEmpty(dressList)) {
-			dressDtoList = dressList.stream().map(dress -> dressDtoMapper.getDressDto(dress))
-					.collect(Collectors.toList());
+			dressDtoList = dressList.stream().map(dress -> dressDtoMapper.getDressDto(dress)).toList();
 		}
 		return dressDtoList;
 	}
@@ -201,19 +181,13 @@ public class DressService {
 		Customer customer = null;
 		Invoice invoice = null;
 		boolean isDressDetailUpdated = false;
-		User user = null;
 		CustomerDto customerDto = dressDetailDto.getCustomer();
 		InvoiceDto invoiceDto = dressDetailDto.getCustomerInvoice();
 		Optional<User> userOptional = userService.getUserByUserId(userId);
 
-		if (userOptional.isPresent()) {
-			user = userOptional.get();
-		}
-
 //		update customer
-//		CustomerDto customerDto = dressDetailDto.getCustomer();
-		if (Objects.nonNull(customerDto)) {
-			customer = customerService.updateCustomer(customerDto, user);
+		if (Objects.nonNull(customerDto) && userOptional.isPresent()) {
+			customer = customerService.updateCustomer(customerDto, userOptional.get());
 		}
 		if (Objects.nonNull(customer)) {
 			LOGGER.info("Customer  details updated successfully");
@@ -223,43 +197,19 @@ public class DressService {
 		List<DressDto> dressDtoList = dressDetailDto.getDressList();
 		if (!DtsUtils.isNullOrEmpty(dressDtoList)) {
 			for (DressDto dressDto : dressDtoList) {
-				Optional<Dress> optionalDress = getDressByDressId(dressDto.getDressId());
-				Dress dress = null;
-				if (optionalDress.isPresent()) {
-					LOGGER.info("Updating dress {}", optionalDress.get().getDressId());
-					dress = getUpdatedDress(optionalDress.get(), dressDto, customer);
-				} else {
-					LOGGER.info("Adding new dress");
-					dress = getUpdatedDress(null, dressDto, customer);
-				}
+				Dress dress = getUpdatedDress(dressDto, customer);
 				dress = dressRepo.save(dress);
 				if (Objects.isNull(dress)) {
 					isDressDetailUpdated = false;
 				} else {
-					int numberOfDress = dress.getNumberOfDress();
-					if (Objects.nonNull(dress.getUserDressType())) {
-						if (numberOfDress > 0) {
-							billAmount += numberOfDress * dress.getUserDressType().getPrice();
-						} else {
-							billAmount += dress.getUserDressType().getPrice();
-						}
-						discountedAmount += dress.getDiscountedPrice();
-					}
+					billAmount += getBillAmount(dress);
+					discountedAmount += dress.getDiscountedPrice();
 				}
 			}
 		}
 //		update invoice
-		if (Objects.nonNull(invoiceDto)) {
-			if (invoiceDto.getBillAmount() <= 0) {
-				invoiceDto.setBillAmount(billAmount);
-			}
-			if (invoiceDto.getDiscountedAmount() <= 0) {
-				invoiceDto.setDiscountedAmount(discountedAmount);
-			}
-		}
-
 		if (Objects.nonNull(invoiceDto) && isDressDetailUpdated) {
-			invoice = invoiceService.updateInvoice(invoiceDto, customer);
+			invoice = updateInvoice(invoiceDto, customer, billAmount, discountedAmount);
 		}
 		if (Objects.nonNull(invoice)) {
 			LOGGER.info("invoice  details updated successfully");
@@ -271,14 +221,96 @@ public class DressService {
 		return customerId;
 	}
 
-	private Dress getUpdatedDress(Dress dress, DressDto dressDto, Customer customer) {
-		Measurement measurement = null;
-		if (Objects.isNull(dress)) {
+	private double getBillAmount(Dress dress) {
+		return dress.getNumberOfDress() > 0 ? dress.getNumberOfDress() * dress.getUserDressType().getPrice()
+				: dress.getUserDressType().getPrice();
+	}
+
+	private Invoice updateInvoice(InvoiceDto invoiceDto, Customer customer, double billAmount,
+			double discountedAmount) {
+		if (invoiceDto.getBillAmount() <= 0) {
+			invoiceDto.setBillAmount(billAmount);
+		}
+		if (invoiceDto.getDiscountedAmount() <= 0) {
+			invoiceDto.setDiscountedAmount(discountedAmount);
+		}
+		return invoiceService.updateInvoice(invoiceDto, customer);
+	}
+
+	private Dress getUpdatedDress(DressDto dressDto, Customer customer) {
+		Dress dress = getDressInstanceById(dressDto.getDressId());
+		Measurement measurement = getMeasurementInstance(dress);
+		dress.setMeasurement(measurement);
+		if (Objects.nonNull(dressDto.getDressType())) {
+			Optional<UserDressType> userDressType = userDressTypeService
+					.getUserDressTypeByUserDressTypeId(dressDto.getDressType().getUserDressTypeId());
+			if (userDressType.isPresent()) {
+				dress.setUserDressType(userDressType.get());
+			}
+		}
+		dress.setOrderDate(getOrderDate(dressDto.getOrderDate(), customer));
+		dress.setDeliveryDate(getDeliveryDate(dressDto.getDeliveryDate(), customer));
+		if (DtsUtils.isNullOrEmpty(dressDto.getDeliveryStatus())) {
+			dressDto.setDeliveryStatus("UNDELIVERED");
+		}
+		dress.setDeliveryStatus(dressDto.getDeliveryStatus());
+		if (dressDto.getNumberOfDress() != 0) {
+			dress.setNumberOfDress(dressDto.getNumberOfDress());
+		} else {
+			dress.setNumberOfDress(1);
+		}
+		dress.setPrice(dressDto.getPrice());
+		if (dressDto.getDiscountedPrice() != 0) {
+			dress.setDiscountedPrice(dressDto.getDiscountedPrice());
+		} else {
+			dress.setDiscountedPrice(dressDto.getPrice());
+		}
+		dress.setPaymentStatus(dressDto.getPaymentStatus());
+		dress.setUpdatedAt(LocalDateTime.now());
+		dress.setComment(dressDto.getComment());
+		dress.setCustomer(customer);
+		return dress;
+
+	}
+
+	private LocalDateTime getDeliveryDate(String deliveryDate, Customer customer) {
+		if (!DtsUtils.isNullOrEmpty(deliveryDate)) {
+			return DtsUtils.convertStringToDate(deliveryDate, DtsUtils.DATE_FORMAT_1);
+		} else {
+			if (Objects.nonNull(customer) && Objects.nonNull(customer.getDeliveryDate())) {
+				return customer.getDeliveryDate();
+			}
+		}
+		return null;
+	}
+
+	private LocalDateTime getOrderDate(String orderDate, Customer customer) {
+		if (!DtsUtils.isNullOrEmpty(orderDate)) {
+			return DtsUtils.convertStringToDate(orderDate, DtsUtils.DATE_FORMAT_1);
+		} else {
+			if (Objects.nonNull(customer) && Objects.nonNull(customer.getOrderDate())) {
+				return customer.getOrderDate();
+			}
+		}
+		return null;
+	}
+
+	private Dress getDressInstanceById(int dressId) {
+		Optional<Dress> optionalDress = getDressByDressId(dressId);
+		Dress dress = null;
+		if (optionalDress.isPresent()) {
+			LOGGER.info("Updating dress {}", optionalDress.get().getDressId());
+			dress = optionalDress.get();
+		} else {
+			LOGGER.info("Adding new dress");
 			dress = new Dress();
 			dress.setCreatedAt(LocalDateTime.now());
-		} else {
-			measurement = dress.getMeasurement();
 		}
+		return dress;
+	}
+
+	private Measurement getMeasurementInstance(Dress dress) {
+		Measurement measurement = dress.getMeasurement();
 		if (Objects.nonNull(measurement)) {
 			measurement.setUpdatedAt(LocalDateTime.now());
 		} else {
@@ -287,53 +319,7 @@ public class DressService {
 			measurement.setCreatedAt(LocalDateTime.now());
 			measurement.setUpdatedAt(LocalDateTime.now());
 		}
-		dress.setMeasurement(measurement);
-		if (Objects.nonNull(dressDto)) {
-			if (Objects.nonNull(dressDto.getDressType())) {
-				Optional<UserDressType> userDressType = userDressTypeService
-						.getUserDressTypeByUserDressTypeId(dressDto.getDressType().getUserDressTypeId());
-				if (userDressType.isPresent()) {
-					dress.setUserDressType(userDressType.get());
-				}
-			}
-			if (!DtsUtils.isNullOrEmpty(dressDto.getOrderDate())) {
-				LocalDateTime orderDate = getFormattedDate(dressDto.getOrderDate());
-				dress.setOrderDate(orderDate);
-			} else {
-				if (Objects.nonNull(customer) && Objects.nonNull(customer.getOrderDate())) {
-					dress.setOrderDate(customer.getOrderDate());
-				}
-			}
-			if (!DtsUtils.isNullOrEmpty(dressDto.getDeliveryDate())) {
-				LocalDateTime deliveryDate = getFormattedDate(dressDto.getDeliveryDate());
-				dress.setDeliveryDate(deliveryDate);
-			} else {
-				if (Objects.nonNull(customer) && Objects.nonNull(customer.getDeliveryDate())) {
-					dress.setDeliveryDate(customer.getDeliveryDate());
-				}
-			}
-			if (DtsUtils.isNullOrEmpty(dressDto.getDeliveryStatus())) {
-				dressDto.setDeliveryStatus("UNDELIVERED");
-			}
-			dress.setDeliveryStatus(dressDto.getDeliveryStatus());
-			if (dressDto.getNumberOfDress() != 0) {
-				dress.setNumberOfDress(dressDto.getNumberOfDress());
-			} else {
-				dress.setNumberOfDress(1);
-			}
-			dress.setPrice(dressDto.getPrice());
-			if (dressDto.getDiscountedPrice() != 0) {
-				dress.setDiscountedPrice(dressDto.getDiscountedPrice());
-			} else {
-				dress.setDiscountedPrice(dressDto.getPrice());
-			}
-			dress.setPaymentStatus(dressDto.getPaymentStatus());
-			dress.setUpdatedAt(LocalDateTime.now());
-			dress.setComment(dressDto.getComment());
-			dress.setCustomer(customer);
-		}
-		return dress;
-
+		return null;
 	}
 
 	public Optional<Dress> getDressByDressId(int dressId) {
@@ -341,221 +327,80 @@ public class DressService {
 		return dressRepo.getDressById(dressId);
 	}
 
+	/**
+	 * @param userId
+	 * @param customerId
+	 * @param files      - file names must come in
+	 *                   D_dressid_measurementtype_incrementnumber.extension
+	 * @return
+	 */
 	@Transactional(value = TxType.REQUIRED, rollbackOn = { SQLException.class })
 	public boolean updateDressImage(int userId, int customerId, List<MultipartFile> files) {
 		LOGGER.info("Update dress images");
 		boolean isDressImagesUpdated = false;
-		Map<String, File> fileMap = new HashMap<>();
-		DateTimeFormatter dateFormat = DateTimeFormatter.ofPattern("yyyyMMdd");
-		final String currentDate = dateFormat.format(LocalDate.now());
-//		DressDetailDto dressDetailDto = null;
-
-		Set<Integer> dressIdList = null;
-		if (!DtsUtils.isNullOrEmpty(files)) {
-//			file names must come in D_dressid_measurementtype_incrementnumber.extension
-			for (MultipartFile multipartFile : files) {
-				dressIdList = new HashSet<>();
-				String fileName = multipartFile.getOriginalFilename();
-				String[] splitNames = fileName.split("_");
-				int dressId = Integer.parseInt(splitNames[1].substring(0));
-				dressIdList.add(dressId);
-			}
-		}
+		Set<Integer> dressIdList = getDressIdList(files);
 		LOGGER.info(" dress ids {}", dressIdList);
 		if (!DtsUtils.isNullOrEmpty(dressIdList)) {
 			for (int dressId : dressIdList) {
 				LOGGER.info("Updating dress images of dress is {}", dressId);
-				Measurement measurement = null;
 				Optional<Dress> optionalDress = getDressByDressId(dressId);
-				Dress dress = null;
-//			Optional<Measurement> measurementOptional = measurementService.getMeasureMentByDressId(dressId);
 				if (optionalDress.isPresent()) {
-					dress = optionalDress.get();
-					measurement = dress.getMeasurement();
-					if (Objects.isNull(measurement)) {
-						measurement = new Measurement();
-						measurement.setDress(optionalDress.get());
-					}
-					List<MultipartFile> dressIdFiles = getMeasurementMultipartFiles(files,
+					Dress dress = optionalDress.get();
+					List<MultipartFile> dressIdFiles = DtsUtils.getMeasurementMultipartFiles(files,
 							DtsConstant.DRESS + DtsConstant.UNDERSCORE + dressId);
 					if (!DtsUtils.isNullOrEmpty(dressIdFiles)) {
-						LOGGER.info("Image found for dress id {}", dressId);
-						String rawImage = measurement.getRawDressImage();
-						String patternImage = measurement.getPatternImage();
-						String seavedImage = measurement.getSeavedImage();
-						String measurementImage = measurement.getMeasurementImage();
-						List<MultipartFile> rawImageList = getMeasurementMultipartFiles(files, DtsConstant.DRESS
-								+ DtsConstant.UNDERSCORE + dressId + DtsConstant.UNDERSCORE + DtsConstant.RAW);
-						List<MultipartFile> patternImageList = getMeasurementMultipartFiles(files, DtsConstant.DRESS
-								+ DtsConstant.UNDERSCORE + dressId + DtsConstant.UNDERSCORE + DtsConstant.PATTERN);
-						List<MultipartFile> seavedImageList = getMeasurementMultipartFiles(files, DtsConstant.DRESS
-								+ DtsConstant.UNDERSCORE + dressId + DtsConstant.UNDERSCORE + DtsConstant.SEAVED);
-						List<MultipartFile> measurementImageList = getMeasurementMultipartFiles(files, DtsConstant.DRESS
-								+ DtsConstant.UNDERSCORE + dressId + DtsConstant.UNDERSCORE + DtsConstant.MEASUREMENT);
-
-//				raw image
-						if (!DtsUtils.isNullOrEmpty(rawImageList)) {
-							for (MultipartFile multipartFile : rawImageList) {
-								String fileExtension = getFileExtension(multipartFile);
-								String fileName = getFileNameFormat(userId, currentDate, dress, DtsConstant.RAW);
-								int i = getIncrementCounter(rawImage, fileName);
-								fileName += i + "." + fileExtension;
-								rawImage = getUpdatedValue(rawImage, fileName);
-								File uploadFile = getUploadFile(multipartFile, fileName);
-								String s3Key = getFileNameKey(userId, dress, fileName);
-								fileMap.put(s3Key, uploadFile);
-//							uploadFileList.add(uploadFile);
-							}
-						}
-//paattern
-						if (!DtsUtils.isNullOrEmpty(patternImageList)) {
-							for (MultipartFile multipartFile : patternImageList) {
-								String fileExtension = getFileExtension(multipartFile);
-								String fileName = getFileNameFormat(userId, currentDate, dress, DtsConstant.PATTERN);
-								int i = getIncrementCounter(patternImage, fileName);
-								fileName += i + "." + fileExtension;
-								patternImage = getUpdatedValue(patternImage, fileName);
-								File uploadFile = getUploadFile(multipartFile, fileName);
-								String s3Key = getFileNameKey(userId, dress, fileName);
-								fileMap.put(s3Key, uploadFile);
-//							uploadFileList.add(uploadFile);
-							}
-						}
-//				seaved
-						if (!DtsUtils.isNullOrEmpty(seavedImageList)) {
-							for (MultipartFile multipartFile : seavedImageList) {
-								String fileExtension = getFileExtension(multipartFile);
-								String fileName = getFileNameFormat(userId, currentDate, dress, DtsConstant.SEAVED);
-								int i = getIncrementCounter(seavedImage, fileName);
-								fileName += i + "." + fileExtension;
-								seavedImage = getUpdatedValue(seavedImage, fileName);
-								File uploadFile = getUploadFile(multipartFile, fileName);
-								String s3Key = getFileNameKey(userId, dress, fileName);
-								fileMap.put(s3Key, uploadFile);
-//							uploadFileList.add(uploadFile);
-							}
-						}
-//				measurement
-						if (!DtsUtils.isNullOrEmpty(measurementImageList)) {
-							for (MultipartFile multipartFile : measurementImageList) {
-								String fileExtension = getFileExtension(multipartFile);
-								String fileName = getFileNameFormat(userId, currentDate, dress,
-										DtsConstant.MEASUREMENT);
-								int i = getIncrementCounter(measurementImage, fileName);
-								fileName += i + "." + fileExtension;
-								measurementImage = getUpdatedValue(measurementImage, fileName);
-								File uploadFile = getUploadFile(multipartFile, fileName);
-								String s3Key = getFileNameKey(userId, dress, fileName);
-								fileMap.put(s3Key, uploadFile);
-//							uploadFileList.add(uploadFile);
-							}
-						}
-						LOGGER.info("Update images measurement for measurement id {}", measurement.getMeasurementId());
-						measurement.setRawDressImage(rawImage);
-						measurement.setPatternImage(patternImage);
-						measurement.setSeavedImage(seavedImage);
-						measurement.setMeasurementImage(measurementImage);
-						measurement.setUpdatedAt(LocalDateTime.now());
-						measurement = measurementService.updateMeasurement(measurement);
-
-						if (Objects.nonNull(measurement)) {
-							isDressImagesUpdated = true;
-							LOGGER.info("measurement updated successfully for measurement id {} and dress id {}",
-									measurement.getMeasurementId(), dressId);
-						}
+						Measurement measurement = updateMeasurement(dress);
+						dress.setMeasurement(measurement);
+						isDressImagesUpdated = updateMeasurementImage(dress, files, userId);
 					}
 				} else {
 					LOGGER.info("Dress not found for dress id {}", dressId);
 				}
 			}
 		}
-		if (!DtsUtils.isNullOrEmpty(fileMap)) {
-//			upload file to s3 storage
-			LOGGER.info("Uploading images to S3 storage");
-			int uploadCount = awsS3Util.uploadFile(fileMap);
-			LOGGER.info("Images uploading count {}", uploadCount);
-//			delete files that are created 
-			fileMap.values().stream().forEach(file -> {
-				try {
-					Files.deleteIfExists(file.toPath());
-				} catch (IOException e) {
-					// TODO Auto-generated catch block
-					e.printStackTrace();
-				}
-			});
-//			dressDetailDto = getDressDetail(userId, customerId);
+		return isDressImagesUpdated;
+	}
+
+	private Measurement updateMeasurement(Dress dress) {
+		Measurement measurement = dress.getMeasurement();
+		if (Objects.isNull(measurement)) {
+			measurement = new Measurement();
+			measurement.setDress(dress);
+		}
+		measurement.setUpdatedAt(LocalDateTime.now());
+		measurement = measurementService.updateMeasurement(measurement);
+		return measurement;
+	}
+
+	private boolean updateMeasurementImage(Dress dress, List<MultipartFile> files, int userId) {
+		boolean isDressImagesUpdated = false;
+		LOGGER.info("Image found for dress id {}", dress.getDressId());
+		measurementImageService.uploadMeasurementImage(files, userId, dress);
+		if (Objects.nonNull(dress.getMeasurement())) {
+			isDressImagesUpdated = true;
+			LOGGER.info("measurement updated successfully for measurement id {} and dress id {}",
+					dress.getMeasurement().getMeasurementId(), dress.getDressId());
 		}
 		return isDressImagesUpdated;
 	}
 
-	private String getUpdatedValue(String imageName, String fileName) {
-		if (!DtsUtils.isNullOrEmpty(imageName) && !imageName.trim().isEmpty()) {
-			imageName += "||" + fileName;
-		} else {
-			imageName = fileName;
-		}
-		return imageName;
-	}
-
-	private String getFileNameKey(int userId, Dress dress, String fileName) {
-		String s3Key = rootFolder + "/user/" + DtsConstant.USER + userId + "/customer/" + DtsConstant.CUSTOMER
-				+ dress.getCustomer().getCustomerId() + "/dress/" + DtsConstant.DRESS + dress.getDressId() + "/"
-				+ fileName;
-		return s3Key;
-	}
-
-	private File getUploadFile(MultipartFile multipartFile, String fileName) {
-		File file = null;
-		Path path = Paths.get(fileName);
-		try {
-			multipartFile.transferTo(path);
-			file = path.toFile();
-		} catch (IllegalStateException | IOException e) {
-			e.printStackTrace();
-		}
-		return file;
-	}
-
-	private List<MultipartFile> getMeasurementMultipartFiles(List<MultipartFile> files, String startName) {
-		return files.stream().filter(file -> file.getOriginalFilename().startsWith(startName))
-				.collect(Collectors.toList());
-	}
-
-	private String getFileExtension(MultipartFile multipartFile) {
-		return multipartFile.getOriginalFilename().substring(multipartFile.getOriginalFilename().lastIndexOf(".") + 1);
-	}
-
-	private int getIncrementCounter(String rawImage, String fileName) {
-		int incrementCounter = 1;
-		boolean isIncreasing = false;
-		if (!DtsUtils.isNullOrEmpty(rawImage)) {
-			if (rawImage.contains(fileName)) {
-				isIncreasing = true;
-				while (isIncreasing) {
-					incrementCounter++;
-					if (!rawImage.contains(fileName + incrementCounter)) {
-						isIncreasing = false;
+	private Set<Integer> getDressIdList(List<MultipartFile> files) {
+		Set<Integer> dressIdList = new HashSet<>();
+		if (!DtsUtils.isNullOrEmpty(files)) {
+//			file names must come in D_dressid_measurementtype_incrementnumber.extension
+			for (MultipartFile multipartFile : files) {
+				int dressId = 0;
+				String fileName = multipartFile.getOriginalFilename();
+				if (!DtsUtils.isNullOrEmpty(fileName)) {
+					String[] splitNames = fileName.split("_");
+					if (!DtsUtils.isNullOrEmpty(splitNames) && splitNames.length > 1) {
+						dressId = Integer.parseInt(splitNames[1]);
+						dressIdList.add(dressId);
 					}
 				}
 			}
 		}
-		return incrementCounter;
-	}
-
-	private String getFileNameFormat(int userId, final String currentDate, Dress dress, String measuremetnType) {
-		String fileName = DtsConstant.USER + userId + DtsConstant.UNDERSCORE + DtsConstant.CUSTOMER
-				+ dress.getCustomer().getCustomerId() + DtsConstant.UNDERSCORE + DtsConstant.DRESS + dress.getDressId()
-				+ DtsConstant.UNDERSCORE + DtsConstant.FILTER_BY_DRESS_TYPE + dress.getUserDressType().getId()
-				+ DtsConstant.UNDERSCORE + measuremetnType + DtsConstant.UNDERSCORE + currentDate
-				+ DtsConstant.UNDERSCORE;
-		return fileName;
-	}
-
-	private LocalDateTime getFormattedDate(String date) {
-		DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("dd/MMM/yyyy");
-		LocalDate parsedLocalDate = LocalDate.parse(date, dateTimeFormatter);
-		LocalDateTime localDateTime = LocalDateTime.of(parsedLocalDate, LocalTime.now());
-		return localDateTime;
+		return dressIdList;
 	}
 
 }
